--- a/COFFEE/Coffee Shop Website/index.html
+++ b/COFFEE/Coffee Shop Website/index.html
@@ -409,9 +409,9 @@
       </div>
       <div class="col-md-5" id="col">
         <h1>Info</h1>
-        <p><i class="fa-regular fa-envelope"></i> example@gmail.com</p>
-        <p><i class="fa-solid fa-phone"></i> +92000000000000000</p>
-       <p><i class="fa-solid fa-building-columns"></i> Karcahi Sindh Pakistan</p>
+        <p><i class="fa-regular fa-envelope"></i> prettybisheo@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i> +2529067544</p>
+       <p><i class="fa-solid fa-building-columns"></i> Citycot University Bosaso</p>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, culpa</p>
       </div>
     </div>
